fixed navbar z-index

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -8,7 +8,7 @@
     background-color: white;
     position: sticky !important;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 
